# capston_shooterGame

./: README.md  capston.sln
FightAliens/: CMakeLists.txt
FightAliens/libs/SDL2/: Makefile  Makefile.rules  config.status  libtool
FightAliens/libs/SDL2/libs/: SDL_audiocvt.d  SDL_blendfillrect.d  SDL_blendline.d  SDL_blit_N.d  SDL_blit_auto.d  SDL_blit_copy.d  SDL_clipboard.d  SDL_cpuinfo.d  SDL_diskaudio.d  SDL_drawline.d  SDL_dspaudio.d  SDL_dummysensor.d  SDL_dynapi.d  SDL_egl.d  SDL_error.d  SDL_fillrect.d  SDL_getenv.d  SDL_haptic.d  SDL_iconv.d  SDL_mouse.d  SDL_pulseaudio.d  SDL_quit.d  SDL_render_gl.d  SDL_render_gles.d  SDL_render_psp.d  SDL_render_sw.d  SDL_rotate.d  SDL_sndioaudio.d  SDL_sysfilesystem.d  SDL_syshaptic.d  SDL_sysjoystick.d  SDL_sysloadso.d  SDL_systimer.d  SDL_test_assert.d  SDL_test_common.d  SDL_test_font.d  SDL_test_fuzzer.d  SDL_test_harness.d  SDL_test_imageBlit.d  SDL_test_log.d  (+21 more)
FightAliens/libs/SDL2_image/: .README.txt.swp
FightAliens/libs/SDL2_image/libs/: djpeg  jpegtran  libSDL2_image-2.0.so.0.2.3  libjpeg.so.9  pngfix  pngvalid  timepng
FightAliens/src/: AlienPlane.cpp  AlienPlane.h  BattleObject.cpp  Bullet.h  BulletFlying.cpp  BulletFlying.h  Controller.cpp  Controller.h  FighterPlane.cpp  FighterPlane.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  defs.h  main.cpp
capston/: AlienPlane.cpp  AlienPlane.h  BattleField.cpp  BattleField.h  Bullet.cpp  Bullet.h  BulletFlying.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  FighterPlane.cpp  FighterPlane.h  Game.cpp  Game.h  Plane.cpp  Plane.h  Renderer.cpp  Renderer.h  (+5 more)
(+9 files in other folders)
